# Computer_Graphics_Projects

./: README.md
Final_proj/Codes/: compile_run.sh
Final_proj/Codes/CGL/: Makefile  cmake_install.cmake
Final_proj/Codes/CGL/src/: Makefile  cmake_install.cmake
Final_proj/Codes/bzc/: crv.bzc
Final_proj/Codes/ply/: cube.ply  diamond.ply  octo.ply  tri.ply  tt.ply
Final_proj/Codes/src/: CMakeLists.txt  Makefile  front.cpp  front.hpp  halfEdgeMesh.cpp  main.cpp  meshEdit.cpp  meshEdit.h  plyparser.cpp  plyparser.h  pointCloud.h  scene.h  student_code.cpp  student_code.h
Final_proj/Codes/src/rply-1.1.4/: rply.c  rply.h
Final_proj/Codes/src/rply-1.1.4/etc/: convert.c  dump.c  sconvert.c
Mesh_upsampling_remeshing/Assignment5/: compile_run.sh
Mesh_upsampling_remeshing/Assignment5/CGL/: Makefile  cmake_install.cmake
Mesh_upsampling_remeshing/Assignment5/CGL/src/: Makefile  cmake_install.cmake
Mesh_upsampling_remeshing/Assignment5/src/: Makefile  cmake_install.cmake  halfEdgeMesh.cpp  main.cpp  meshEdit.cpp  meshEdit.h  student_code.cpp  student_code.h
Path_tracing_env_lighting_bsdf/hw7_pathtracer/: compile_run.sh
Path_tracing_env_lighting_bsdf/hw7_pathtracer/src/pathtracer/: advanced_bsdf.cpp  bsdf.h  camera_lens.cpp
Path_tracing_env_lighting_bsdf/hw7_pathtracer/src/scene/: environment_light.cpp
Rasterization_Sampling_Anti_aliasing/: CMakeLists.txt  compile_run.sh
Rasterization_Sampling_Anti_aliasing/CGL/: Makefile  cmake_install.cmake
Rasterization_Sampling_Anti_aliasing/CGL/src/: viewer.cpp
Rasterization_Sampling_Anti_aliasing/src/: drawrend.cpp  helper.cpp  helper.h  main.cpp  rasterizer.cpp  rasterizer.h  svg.cpp  svgparser.cpp  texture.cpp  texture.h  transforms.cpp
Rasterization_Sampling_Anti_aliasing/tests/outputs/: test_all.py
Ray_tracing/RayTracing/: cmake_install.cmake  compile_run.sh
Ray_tracing/RayTracing/CGL/: Makefile  cmake_install.cmake
Ray_tracing/RayTracing/src/pathtracer/: bsdf.cpp  bsdf.h  camera.cpp  pathtracer.cpp
Ray_tracing/RayTracing/src/scene/: bbox.cpp  bvh.cpp  bvh.h  sphere.cpp  triangle.cpp
Transformations/: CMakeLists.txt  Readme.md  compile_run.sh  config.ini
Transformations/include/: Triangle.hpp  rasterizer.hpp
Transformations/src/: Triangle.cpp  main.cpp  rasterizer.cpp
VirtualBox_and_math_review/: CMakeLists.txt  compile_run.sh  hw1.cpp
